[package]
name = "todoapp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono" ] }
chrono = { version = "0.4.44", features = ["serde" ]}
dotenvy = "0.15.7"
